added live links

--- a/index.html
+++ b/index.html
@@ -38,6 +38,21 @@
 	<section class="row">
 		<div class="card-group">
 
+			<!-- <div class=" col-12 col-md-6 col-lg-4 cardHolder">
+				<article class="card border-0 rounded">
+					<img src="images/office.png" class="card-img-top rounded" alt='screenshot of office sign-in app'>
+					<div class="card-body">
+						<h4 class="card-title">OFFICE SIGN IN</h4>
+						<p class="card-text">This is a full stack project that uses the MERN stack. This app is deigned for iPad and lets visitors sign in. It also allows Admin users to </p>
+					</div>
+					<div class="card-footer bg-transparent border-0">
+						<a href="https://github.com/iO-Academy/23-jan-signin-fe" class="card-link" target="_blank">Github code(front-end)</a>
+						<a href="https://github.com/iO-Academy/23-jan-signin-be" class="card-link" target="_blank">Github code (back-end)</a>
+						<a href="" class="card-link" target="_blank">Live project</a>
+					</div>
+				</article>
+			</div> -->
+
 <!--			<div class=" col-12 col-md-6 col-lg-4 cardHolder">-->
 <!--				<article class="card border-0 rounded">-->
 <!--					<img src="" class="card-img-top rounded" alt='screenshot of restful API'>-->
@@ -53,7 +68,7 @@
 
 			<div class=" col-12 col-md-6 col-lg-4 cardHolder">
 				<article class="card border-0 rounded">
-					<img src="images/todoapi.png" class="card-img-top rounded" alt='screenshot of project management API'>
+					<img src="images/todoapi.png" class="card-img-top rounded" alt='screenshot of to-do list API'>
 					<div class="card-body">
 						<h4 class="card-title">TO-DO LIST API</h4>
 						<p class="card-text">Using a populated MongoDB database, I have created a to-do list Node API that uses Express. The API can handle GET, POST, PUT and DELETE requests from the user and returns status codes whilst relying on validation.</p>
@@ -66,7 +81,7 @@
 
 			<div class=" col-12 col-md-6 col-lg-4 cardHolder">
 				<article class="card border-0 rounded">
-					<img src="images/legacy.png" class="card-img-top rounded" alt='screenshot of project management API'>
+					<img src="images/legacy.png" class="card-img-top rounded" alt='screenshot of academy portal'>
 					<div class="card-body">
 						<h4 class="card-title">ACADEMY PORTAL</h4>
 						<p class="card-text">Working on a full-stack legacy app, we were tasked with editing the Academy Portal and fixing ongoing bugs. We added functionality which allowed Admin users to keep track of how many places are available on each course. This project was built using PHP Slim and JavaScript.</p>
@@ -80,13 +95,18 @@
 
 			<div class=" col-12 col-md-6 col-lg-4 cardHolder">
 				<article class="card border-0 rounded">
-					<img src="images/api.png" class="card-img-top rounded" alt='screenshot of project management API'>
+					<img src="images/api.png" class="card-img-top rounded" alt='screenshot of project management API front end'>
 					<div class="card-body">
 						<h4 class="card-title">PROJECT MANAGEMENT API</h4>
-						<p class="card-text">With a pre-existing front-end, we created a back-end API that supports GET requests using PHP Object-Oriented Programming and SQL.</p>
+						<p class="card-text">With a pre-existing front-end, we created a back-end API that supports GET requests using PHP Object-Oriented Programming and SQL. The requests cover retrieving all project data and also handles specific project ny id. Changing the id will retrieve the related project API.  </p>
 					</div>
 					<div class="card-footer bg-transparent border-0">
 						<a href="https://github.com/iO-Academy/23-jan-projectManagementApi" class="card-link" target="_blank">Github code</a>
+						<a href="https://2023-jan-groundhogs-project-management-api.dev.io-academy.uk/projects.php" class="card-link" target="_blank">Live project</a>
+					
+					<div>
+						<a href="https://2023-jan-groundhogs-project-management-api.dev.io-academy.uk/project.php?id=1" class="card-link" target="_blank">Live project - id example</a>
+					</div>
 					</div>
 				</article>
 			</div>
@@ -100,6 +120,7 @@
 					</div>
 					<div class="card-footer bg-transparent border-0">
 						<a href="https://github.com/iO-Academy/23-jan-foodDeliveryFE" class="card-link" target="_blank">Github code</a>
+						<a href="https://2023-jan-groundhogs-food-delivery.dev.io-academy.uk/" class="card-link" target="_blank">Live project</a>
 					</div>
 				</article>
 			</div>
@@ -139,8 +160,8 @@
 <footer id="contact">
 	<h2 class="text-center pt-5 mt-5">CONTACT ME</h2>
 	<div class="d-flex justify-content-center">
-		<a href="https://github.com/alreuben" target="_blank"><img class="icons px-3" src="images/github.png" alt="gitgub link"/></a>
-		<a href="https://www.linkedin.com/in/ayannah-reuben-552335142" target="_blank"><img class="icons px-3" src="images/linkedin.png" alt="linkedn link"/></a>
+		<a href="https://github.com/alreuben" target="_blank"><img class="icons px-3" src="images/github.png" alt="github link"/></a>
+		<a href="https://www.linkedin.com/in/ayannah-reuben-552335142" target="_blank"><img class="icons px-3" src="images/linkedin.png" alt="linkedin link"/></a>
 		<a href="mailto:ayannahreuben+jobs@gmail.com" target="_blank"><img class="icons px-3" src="images/email.png" alt="email link"/></a>
 	</div>
 	<p class="text-center mt-3">© Copyright Ayannah Reuben 2023</p>
