--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 					<img src="images/api.png" class="card-img-top rounded" alt='screenshot of project management API front end'>
 					<div class="card-body">
 						<h4 class="card-title">PROJECT MANAGEMENT API</h4>
-						<p class="card-text">With a pre-existing front-end, we created a back-end API that supports GET requests using PHP Object-Oriented Programming and SQL. The requests cover retrieving all project data and also handles specific project ny id. Changing the id will retrieve the related project API.  </p>
+						<p class="card-text">With a pre-existing front-end, we created a back-end API that supports GET requests using PHP Object-Oriented Programming and SQL. The requests cover retrieving all project data and also handles specific project by id. Changing the id will retrieve the related project API.</p>
 					</div>
 					<div class="card-footer bg-transparent border-0">
 						<a href="https://github.com/iO-Academy/23-jan-projectManagementApi" class="card-link" target="_blank">Github code</a>
