--- a/index.html
+++ b/index.html
@@ -53,24 +53,25 @@
 				</article>
 			</div> -->
 
-<!--			<div class=" col-12 col-md-6 col-lg-4 cardHolder">-->
-<!--				<article class="card border-0 rounded">-->
-<!--					<img src="" class="card-img-top rounded" alt='screenshot of restful API'>-->
-<!--					<div class="card-body">-->
-<!--						<h4 class="card-title">RESTFUL API</h4>-->
-<!--						<p class="card-text">Using a populated MongoDB database, I have created a todo list Node API that uses Express. The API can handle GET, POST, PUT and DELETE requests from the user and returns status codes whilst relying on validation.</p>-->
-<!--					</div>-->
-<!--					<div class="card-footer bg-transparent border-0">-->
-<!--						<a href="https://github.com/alreuben/todoListApi" class="card-link" target="_blank">Github code</a>-->
-<!--					</div>-->
-<!--				</article>-->
-<!--			</div>-->
+			<div class=" col-12 col-md-6 col-lg-4 cardHolder">
+				<article class="card border-0 rounded">
+					<img src="images/lotr_api.PNG" class="card-img-top rounded" alt='screenshot of to-do list API'>
+					<div class="card-body">
+						<h4 class="card-title">RANDOM QUOTE GENERATOR</h4>
+						<p class="card-text">Using an open-source API. I have created a Lord of the Rings, <b>React</b> random quote generator for each of the three films. When clicking the image of a character, a random character quote from the chosen film will display on screen.</p>
+					</div>
+					<div class="card-footer bg-transparent border-0">
+						<a href="https://github.com/alreuben/todoListApi" class="card-link" target="_blank">Github code</a>
+						<a href="https://alreuben.github.io/lotrQuoteGenerator" class="card-link" target="_blank">Live project</a>
+					</div>
+				</article>
+			</div>
 
 			<div class=" col-12 col-md-6 col-lg-4 cardHolder">
 				<article class="card border-0 rounded">
 					<img src="images/todoapi.png" class="card-img-top rounded" alt='screenshot of to-do list API'>
 					<div class="card-body">
-						<h4 class="card-title">TO-DO LIST API</h4>
+						<h4 class="card-title">RESTFUL TO-DO LIST API</h4>
 						<p class="card-text">Using a populated MongoDB database, I have created a to-do list Node API that uses Express. The API can handle GET, POST, PUT and DELETE requests from the user and returns status codes whilst relying on validation.</p>
 					</div>
 					<div class="card-footer bg-transparent border-0">
