--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 					<img src="images/lotr_api.PNG" class="card-img-top rounded" alt='screenshot of to-do list API'>
 					<div class="card-body">
 						<h4 class="card-title">RANDOM QUOTE GENERATOR</h4>
-						<p class="card-text">Using an open-source API. I have created a Lord of the Rings, <b>React</b> random quote generator for each of the three films. When clicking the image of a character, a random character quote from the chosen film will display on screen.</p>
+						<p class="card-text"> A Lord of the Rings random quote generator using an open-source API. This app uses React and fetches data for each of the three films. When clicking the image of a character, a random character quote from the chosen film will display on screen.</p>
 					</div>
 					<div class="card-footer bg-transparent border-0">
-						<a href="https://github.com/alreuben/todoListApi" class="card-link" target="_blank">Github code</a>
+						<a href="https://github.com/alreuben/lotr-quote-generator" class="card-link" target="_blank">Github code</a>
 						<a href="https://alreuben.github.io/lotrQuoteGenerator" class="card-link" target="_blank">Live project</a>
 					</div>
 				</article>
